# quantity-array

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASING.md  pyproject.toml  xp-tests-xfails.txt
.github/workflows/: cd.yml  ci.yml
pint_array/: __init__.py  quantity.py
src/pint_array/: __init__.py  funcs.py
src/quantity_array/: __init__.py
tests/: test_array.py  test_pint_array.py  test_version.py
