[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
    { name = "Lucas Colley", email = "lucas.colley8@gmail.com" },
]
name = "pint-array"
description = "Pint quantities with array API standard arrays."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/lucascolley/pint-array"

[tool.hatch]
version.path = "src/pint_array/__init__.py"

[tool.pixi.project]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
pint = ">=0.24.4,<0.25"
array-api-compat = ">=1.10.0,<2"
array-api-strict = ">=2.2,<3"

[tool.pixi.pypi-dependencies]
pint-array = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
ipython = ">=8.31.0,<9"

[tool.pixi.feature.dev.tasks]
ipython = "ipython"

[tool.pixi.feature.tests.dependencies]
pytest = "*"

[tool.pixi.feature.tests.tasks]
tests = "pytest"

[tool.pixi.feature.py310.dependencies]
python = "~=3.10.0"

[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "tests"], solve-group = "default" }
ci-py310 = ["py310", "tests"]
ci-py313 = ["py313", "tests"]
