[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
    { name = "Lucas Colley", email = "lucas.colley8@gmail.com" },
]
name = "pint-array"
description = "Pint quantities with array API standard arrays."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/lucascolley/pint-array"

[tool.hatch]
version.path = "src/pint_array/__init__.py"

[tool.pixi.project]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
pint = ">=0.24.4,<0.25"
array-api-compat = ">=1.10.0,<2"
array-api-strict = ">=2.2,<3"

[tool.pixi.pypi-dependencies]
pint-array = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
ipython = ">=8.31.0,<9"

[tool.pixi.feature.dev.tasks]
ipython = "ipython"

[tool.pixi.feature.tests.dependencies]
pytest = "*"

[tool.pixi.feature.tests.tasks]
tests = "pytest"

[tool.pixi.feature.py310.dependencies]
python = "~=3.10.0"

[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "tests"], solve-group = "default" }
ci-py310 = ["py310", "tests"]
ci-py313 = ["py313", "tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "F",   # Pyflakes
    "I",   # isort
    "E",   # Pycodestyle
    "W",   # Pycodestyle
    "N",   # pep8-naming
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "EXE", # flake8-executable
    "NPY", # NumPy specific rules
    "PD",  # pandas-vet
    "UP",  # Pyupgrade
]
ignore = [
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "ISC001",  # Conflicts with formatter
    "N802",    # Function name should be lowercase
    "N806",    # Variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
